--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 12
       - name: Install dependencies
         working-directory: ./packages/web
-        run: npm run build
+        run: npm install && npm run build
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
