--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,6 +8,16 @@
     "type": "git",
     "url": "https://github.com/epsagon/epsagon-browser.git"
   },
+  "keywords": [
+    "browser tracing",
+    "epsagon",
+    "tracing",
+    "distributed-tracing",
+    "real user monitoring",
+    "client side monitoring",
+    "debugging",
+    "monitoring"
+  ],
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
@@ -94,6 +104,13 @@
       "main"
     ]
   },
+  "publishConfig": {
+    "access": "public"
+  },
+  "bugs": {
+    "url": "https://github.com/epsagon/epsagon-browser/issues"
+  },
+  "homepage": "https://github.com/epsagon/epsagon-browser#readme",
   "files": [
     "dist"
   ]
