--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,12 +16,23 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
-      - name: Install dependencies
+
+      - name: Install dependencies @epsagon/web
         working-directory: ./packages/web
-        run: npm install && npm run build
-      - name: Release
+        run: npm install && npm run test & npm run buildbuild
+      - name: Release @epsagon/web
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         working-directory: ./packages/web
+        run: npm run semantic-release
+
+      - name: Install dependencies @epsagon/react
+        working-directory: ./packages/react
+        run: npm install && npm run test & npm run build
+      - name: Release @epsagon/react
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        working-directory: ./packages/react
         run: npm run semantic-release
