--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Install dependencies @epsagon/web
         working-directory: ./packages/web
-        run: npm install && npm run test & npm run buildbuild
+        run: npm install && npm run test && npm run build
       - name: Release @epsagon/web
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install dependencies @epsagon/react
         working-directory: ./packages/react
-        run: npm install && npm run test & npm run build
+        run: npm install && npm run test && npm run build
       - name: Release @epsagon/react
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
