--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -89,6 +89,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "typescript": "^4.3.4",
+    "react-scripts": "^4.0.3",
     "semantic-release": "^17.4.4"
   },
   "release": {
