--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -48,7 +48,7 @@
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
     "prepare": "npx tsc && run-s build",
     "build-dist": "./node_modules/typescript/bin/tsc",
-    "test": "run-s test:unit test:lint test:build",
+    "test": "run-s test:unit test:build",
     "test:build": "run-s build",
     "test:lint": "eslint .",
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
