--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,6 +21,7 @@
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
+  "types": "dist/index.d.ts",
   "engines": {
     "node": ">=10"
   },
@@ -44,8 +45,8 @@
   "scripts": {
     "build": "microbundle-crl --no-compress --format modern,cjs",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
-    "prepare": "run-s build",
-    "test": "run-s test:unit test:build",
+    "prepare": "npx tsc && run-s build",
+    "build-dist": "./node_modules/typescript/bin/tsc",
     "test:build": "run-s build",
     "test:lint": "eslint .",
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
@@ -94,11 +95,13 @@
     "gh-pages": "^3.2.3",
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
+    "npx": "^10.2.2",
     "prettier": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^4.0.3",
-    "semantic-release": "^17.4.4"
+    "semantic-release": "^17.4.4",
+    "typescript": "^4.3.4"
   },
   "release": {
     "branches": [
