--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -49,8 +49,9 @@
     "build-dist": "./node_modules/typescript/bin/tsc",
     "test:build": "run-s build",
     "test:lint": "eslint .",
-    "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
-    "test:watch": "react-scripts test --env=jsdom",
+    "test:unit": "cross-env CI=1 mocha --require @babel/register",
+    "test:watch": "mocha --require @babel/register",
+    "test": "mocha --require @babel/register",
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build",
     "semantic-release": "semantic-release"
@@ -70,6 +71,7 @@
     "@opentelemetry/instrumentation-xml-http-request": "^0.20.0",
     "@opentelemetry/tracing": "^0.20.0",
     "@opentelemetry/web": "^0.20.0",
+    "node-fetch": "^2.6.1",
     "ua-parser-js": "^0.7.28"
   },
   "devDependencies": {
@@ -79,8 +81,10 @@
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-flow": "^7.13.13",
     "@babel/preset-react": "^7.13.13",
+    "@babel/register": "^7.14.5",
     "@babel/runtime": "^7.14.0",
     "babel-eslint": "^10.0.3",
+    "chai": "^4.3.4",
     "cross-env": "^7.0.2",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.7.0",
@@ -94,6 +98,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^3.2.3",
     "microbundle-crl": "^0.13.10",
+    "mocha": "^9.0.2",
     "npm-run-all": "^4.1.5",
     "npx": "^10.2.2",
     "prettier": "^2.0.4",
@@ -101,6 +106,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "^4.0.3",
     "semantic-release": "^17.4.4",
+    "sinon": "^10.0.0",
     "typescript": "^4.3.4"
   },
   "release": {
