--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -50,8 +50,8 @@
     "test:build": "run-s build",
     "test:lint": "eslint .",
     "test:unit": "cross-env CI=1 mocha --require @babel/register",
-    "test:watch": "mocha --require @babel/register",
-    "test": "mocha --require @babel/register",
+    "test:watch": "mocha --require @babel/register --require mocha-suppress-logs",
+    "test": "mocha --require @babel/register --require mocha-suppress-logs",
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build",
     "semantic-release": "semantic-release"
@@ -99,6 +99,7 @@
     "gh-pages": "^3.2.3",
     "microbundle-crl": "^0.13.10",
     "mocha": "^9.0.2",
+    "mocha-suppress-logs": "^0.3.1",
     "npm-run-all": "^4.1.5",
     "npx": "^10.2.2",
     "prettier": "^2.0.4",
