--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -49,6 +49,7 @@
     "build-dist": "./node_modules/typescript/bin/tsc",
     "test:build": "run-s build",
     "test:lint": "eslint .",
+    "test:lintfix": "eslint . --fix",
     "test:unit": "cross-env CI=1 mocha --require @babel/register",
     "test:watch": "mocha --require @babel/register --require mocha-suppress-logs --exit",
     "test": "mocha --require @babel/register --require mocha-suppress-logs --exit",
@@ -69,6 +70,7 @@
     "@opentelemetry/instrumentation-fetch": "^0.20.0",
     "@opentelemetry/instrumentation-user-interaction": "^0.16.0",
     "@opentelemetry/instrumentation-xml-http-request": "^0.20.0",
+    "@opentelemetry/semantic-conventions": "^0.23.0",
     "@opentelemetry/tracing": "^0.20.0",
     "@opentelemetry/web": "^0.20.0",
     "node-fetch": "^2.6.1",
