--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@epsagon/react",
+  "name": "@epsagin/web",
   "version": "0.0.0-development",
   "description": "This package provides tracing to React web applications for the collection of distributed tracing and performance metrics.",
   "author": "Epsagon Team <support@epsagon.com>",
@@ -61,7 +61,7 @@
     "react": "^16.0.0"
   },
   "dependencies": {
-    "@epsagon/web": "^1.1.5",
+    "@epsagin/nodejs": "^1.1.5",
     "@opentelemetry/plugin-react-load": "^0.16.0",
     "ua-parser-js": "^0.7.28"
   },
