--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -43,7 +43,7 @@
     ]
   },
   "scripts": {
-    "build": "microbundle-crl --no-compress --format modern,cjs",
+    "build": "microbundle-crl --no-compress --format modern,cjs; webpack",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
     "prepare": "npx tsc && run-s build",
     "build-dist": "./node_modules/typescript/bin/tsc",
@@ -110,7 +110,8 @@
     "react-scripts": "^4.0.3",
     "semantic-release": "^17.4.4",
     "sinon": "^10.0.0",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "webpack-cli": "^4.8.0"
   },
   "release": {
     "branches": [
