--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,8 @@
 name: Release
 on:
+  pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
@@ -16,7 +19,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
-      
+
       - name: Install dependencies @epsagon/web
         working-directory: ./packages/web
         run: npm install && npm run test && npm run build
@@ -26,7 +29,7 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         working-directory: ./packages/web
         run: npm run semantic-release
-          
+
       - name: Install dependencies @epsagon/react
         working-directory: ./packages/react
         run: npm install && npm run test && npm run build
@@ -37,4 +40,4 @@ jobs:
         working-directory: ./packages/react
         run: npm run semantic-release
 
-      
+
