--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,6 +22,11 @@
   "module": "dist/index.modern.js",
   "source": "src/index.js",
   "types": "dist/index.d.ts",
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "engines": {
     "node": ">=10"
   },
@@ -76,7 +81,11 @@
     "node-fetch": "^2.6.1",
     "ua-parser-js": "^0.7.28"
   },
+
   "devDependencies": {
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-angular": "^7.1.2",
+    "@commitlint/config-conventional": "^7.1.2",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-react-jsx": "^7.14.3",
